--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>ru.kkudaibergen.soapui.weblogic.hello</groupId>
     <artifactId>hello</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <properties>
         <javax>7.0</javax>
